# walkie-talkie

./: .claude-ci.json  .gitattributes  .gitignore  .gitmodules  DEPLOY.md  Gemfile  README.md  pubspec.yaml
.forgejo/workflows/: ci.yml  release.yml
.github/: dependabot.yml
.github/workflows/: flutter.yml  pages.yml  play-store-deploy.yml  play-store-metadata.yml  play-store-promote.yml  release.yml
android/: SIGNING.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  audio_config.h  audio_engine.cpp  audio_mixer.cpp  audio_mixer.h  jitter_buffer.cpp  jitter_buffer.h  opus_codec.cpp  opus_codec.h  peer_audio_manager.cpp  peer_audio_manager.h  playback_stream_config.h  playout_lag_estimator.h  resampler.h  ring_buffer.h  talking_event_queue.h  vad_detector.h
assets/licenses/: opus-COPYING.txt
coverage/: lcov.info
design/: Walkie-Talkie Prototype.html
docs/: _config.yml  index.md  invite-links.md  play-store-content-rating.md  play-store-data-safety.md  play-store-listing.md  play-store-permissions-rationale.md  play-store-submission-guide.md  privacy-policy.md  protocol.md  sentry-setup.md  smoke-test.md
fastlane/: Appfile  Fastfile
lib/: main.dart
lib/l10n/: app_en.arb  (+1 more)
scripts/: README.md  _fonts.py  gen_screenshots.py  gen_tablet_screenshots.py  install-git-hooks.sh  measure_app_size.sh  presubmit.sh  run_native_cpp_tests.sh  validate_store_metadata.sh
test/: widget_test.dart
tool/: generate_store_screenshots.dart  generate_store_screenshots_test.dart
(+179 files in other folders)
